dep-locust-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    role: locust-master
  name: locust-master
spec:
  replicas: 1
  selector:
    matchLabels:
      role: locust-master
  template:
    metadata:
      labels:
        role: locust-master
    spec:
      containers:
      - image: localhost:32000/mqlocust
        imagePullPolicy: IfNotPresent
        name: locust-master
        args: ["-f", "/mnt/locust/locustfile.py", "--master", "-H", "http://locust-master:8089"]
        volumeMounts:
          - mountPath: /mnt/locust
            name: locust-files
        ports:
        - containerPort: 8089
        - containerPort: 5557
        - containerPort: 5558
      volumes:
      - name: locust-files
        hostPath:
          path: /home/matt/dev/locust-kubernetes/resources/locust-files/foobar
